<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.TextPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_size"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Home" />

        <TextView
            android:id="@+id/tvPopularGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/popular_games"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPopularGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="180dp"
            app:layout_constraintTop_toBottomOf="@+id/tvPopularGame"
            tools:itemCount="1"
            tools:listitem="@layout/item_game" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/progressPopular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvPopularGame"
            app:shimmer_auto_start="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <include layout="@layout/item_game_placeholder" />

                <include layout="@layout/item_game_placeholder" />
            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <TextView
            android:id="@+id/tvUpcomingGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/upcoming_games"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvPopularGame" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvUpcomingGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="180dp"
            app:layout_constraintTop_toBottomOf="@+id/tvUpcomingGame"
            tools:itemCount="1"
            tools:listitem="@layout/item_game" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/progressUpcoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvUpcomingGame"
            app:shimmer_auto_start="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <include layout="@layout/item_game_placeholder" />

                <include layout="@layout/item_game_placeholder" />
            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <TextView
            android:id="@+id/tvTopRatedGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/top_rated_games"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvUpcomingGame" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTopRatedGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="180dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTopRatedGame"
            tools:itemCount="1"
            tools:listitem="@layout/item_game" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/progressTopRated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvTopRatedGame"
            app:shimmer_auto_start="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <include layout="@layout/item_game_placeholder" />

                <include layout="@layout/item_game_placeholder" />
            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
